--- a/index.html
+++ b/index.html
@@ -676,7 +676,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="swiper-pagination"></div> -->
+                    <div class="swiper-pagination"></div>
+                    <img src="assets/images/our_customers.png" class="img-contact--1" alt="">
+                    <img src="assets/images/4.png" class="img-contact--2" alt="">
                 </div>
             </div>
         </div>
@@ -691,32 +693,11 @@
                         America, and the US, we are ready to align your business goals with the right digital marketing
                         capabilities needed to drive your company's success. Let's build something great. </p>
                     <a href="#contact" data-aos="zoom-out-up" data-aos-delay="400"
-                        class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See what's Possible</a>
+                        class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
                 </div>
+                <img src="assets/images/2.png" class="img-contact-1" alt="">
+                <img src="assets/images/3.png" class="img-contact-2" alt="">
             </div>
-            <!-- <div class="row">
-                    <div class="col-12 p-0">
-                        <form action="php/form.php" id="leverage-subscribe" class="row m-auto items">
-                            <input type="hidden" name="section" value="leverage_subscribe">
-
-                            <input type="hidden" name="reCAPTCHA"> -->
-            <!-- Remove this field if you want to disable recaptcha -->
-
-            <!-- <div class="col-12 col-lg-5 m-lg-0 input-group align-self-center item">
-                                <input type="text" name="name" class="form-control field-name" placeholder="Name">
-                            </div>
-                            <div class="col-12 col-lg-5 m-lg-0 input-group align-self-center item">
-                                <input type="email" name="email" class="form-control field-email" placeholder="Email">
-                            </div>
-                            <div class="col-12 col-lg-2 m-lg-0 input-group align-self-center item">
-                                <a class="btn primary-button w-100">SUBSCRIBE</a>
-                            </div>
-                            <div class="col-12 text-center">
-                                <span class="form-alert mt-5 mb-0"></span>
-                            </div>
-                        </form>
-                    </div> -->
-        </div>
         </div>
     </section>
 
