--- a/specialties.html
+++ b/specialties.html
@@ -264,6 +264,24 @@
         </div>
 
     </section>
+    <section class="pt-0">
+        <div class="container cta-contact">
+            <div class="row text-left intro">
+                <div class="col-12 col-md-7">
+                    <span class="title-1" style="line-height: 0.9;">Let's talk</span><br>
+                    <span class="title-2" style="line-height: 0.9;">about</span> <br>
+                    <span class="title-3" style="line-height: 1;">Growth!</span>
+                    <p class="text-max-800 p-about">Build your brand, starting today. With teams based in Europe, Latin
+                        America, and the US, we are ready to align your business goals with the right digital marketing
+                        capabilities needed to drive your company's success. Let's build something great. </p>
+                    <a href="#contact" data-aos="zoom-out-up" data-aos-delay="400"
+                        class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
+                </div>
+                <img src="assets/images/2.png" class="img-contact-1" alt="">
+                <img src="assets/images/3.png" class="img-contact-2" alt="">
+            </div>
+        </div>
+    </section>
     <!-- Specialties -->
 
 
