--- a/index.html
+++ b/index.html
@@ -364,8 +364,9 @@
                 </div>
                 <div class="item" style="padding: 0">
                     <div class="card_services featured">
-                        <img src="/assets/images/advertising.svg" alt="" style="width: 50px;">
+                        <img src="/assets/images/advertising.png" alt="" style="width: 50px;">
                         <h6 class="service-title">Advertising</h6>
+
                         <a href="page-single-service-1.html"></a>
                     </div>
                 </div>
@@ -432,7 +433,7 @@
 
     <!-- start portfolio section -->
     <section class="section-7 wow animate__fadeIn pt-6 sm-padding-40px-bottom padding-20px-bottom ">
-        <div class="container-fluid">
+        <div class="container-fluid p-0">
             <div class="col-12 text-center">
                 <h2 class="work_pp_title">Our <b>Work</b></h2>
             </div>
