--- a/about.html
+++ b/about.html
@@ -424,7 +424,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-container mid-slider-simple items">
+                <div class="swiper-container mid-slider-simple items px-0">
                     <div class="swiper-wrapper">
 
 
@@ -434,15 +434,15 @@
 
 
 
-                        <div class="swiper-slide slide-center text-center item">
+                        <div class="swiper-slide slide-center text-center item ">
                             <div class="row card p-1 no-hover shadow-none bg-white">
                                 <figure style="margin-top: 200px;">
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
-                                <div class="col-12">
+                                <div class="col-12 persona">
                                     <img src="/assets/images/antoine.jpg" alt="ANTOINE ZERVUDACKI" class="">
-                                    <h4 class="my-3">Antoine Zervudacki</h4>
-                                    <p class="m-0">CEO</p>
+                                    <h4 class="mt-3 mb-1 testimonials-c">Antoine Zervudacki</h4>
+                                    <p class="m-0 testimonials-e">CEO</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
@@ -451,15 +451,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide slide-center text-center item">
+                        <div class="swiper-slide slide-center text-center item ">
                             <div class="row card p-1 no-hover shadow-none bg-white">
                                 <figure style="margin-top: 200px;">
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
-                                <div class="col-12">
+                                <div class="col-12 persona">
                                     <img src="/assets/images/LILIANA.jpg" alt="LILIANA RODRIGUEZ" class="">
-                                    <h4 class="my-3">Liliana Rodriguez</h4>
-                                    <p class="m-0">CREATIVE DIRECTOR</p>
+                                    <h4 class="mt-3 mb-1 testimonials-c">Liliana Rodriguez</h4>
+                                    <p class="m-0 testimonials-e">CREATIVE DIRECTOR</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
@@ -468,15 +468,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide slide-center text-center item">
+                        <div class="swiper-slide slide-center text-center item ">
                             <div class="row card p-1 no-hover shadow-none bg-white">
                                 <figure style="margin-top: 200px;">
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
-                                <div class="col-12">
+                                <div class="col-12 persona">
                                     <img src="/assets/images/ANDRES.jpg" alt="ANDRES GARZON" class="">
-                                    <h4 class="my-3">Andres Garzon</h4>
-                                    <p class="m-0">SENIOR MULTIMEDIA PRODUCER</p>
+                                    <h4 class="mt-3 mb-1 testimonials-c">Andres Garzon</h4>
+                                    <p class="m-0 testimonials-e">SENIOR MULTIMEDIA PRODUCER</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
@@ -485,15 +485,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide slide-center text-center item">
+                        <div class="swiper-slide slide-center text-center item ">
                             <div class="row card p-1 no-hover shadow-none bg-white">
                                 <figure style="margin-top: 200px;">
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
-                                <div class="col-12">
+                                <div class="col-12 persona">
                                     <img src="/assets/images/CRISTIAN.jpg" alt="CRISTIAN AVENDANO" class="">
-                                    <h4 class="my-3">Cristian Avendaño</h4>
-                                    <p class="m-0">SENIOR BRAND DIRECTOR</p>
+                                    <h4 class="mt-3 mb-1 testimonials-c">Cristian Avendaño</h4>
+                                    <p class="m-0 testimonials-e">SENIOR BRAND DIRECTOR</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
@@ -502,15 +502,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide slide-center text-center item">
+                        <div class="swiper-slide slide-center text-center item ">
                             <div class="row card p-1 no-hover shadow-none bg-white">
                                 <figure style="margin-top: 200px;">
                                     <img class="position-absolute foco" src="assets/images/foco.png" alt="">
                                 </figure>
-                                <div class="col-12">
+                                <div class="col-12 persona">
                                     <img src="/assets/images/FELIPE.jpg" alt="FELIPE OROZCO" class="">
-                                    <h4 class="my-3">Felipe Orozco</h4>
-                                    <p class="m-0">LEADER OF SEO, SEM AND SOCIAL MEDIA ADS</p>
+                                    <h4 class="mt-3 mb-1 testimonials-c">Felipe Orozco</h4>
+                                    <p class="m-0 testimonials-e">LEADER OF SEO, SEM AND SOCIAL MEDIA ADS</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
@@ -522,7 +522,7 @@
 
 
                     </div>
-                    <p class=" text-center p-about mb-4">Our team will help you define a stand-out creative
+                    <p class=" text-center p-about mb-4 mt-0">Our team will help you define a stand-out creative
                         direction and will translate it into visual assets that will resonate with your audience.</p>
                     <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="800"
                         class="btn primary-button m-auto mb-5">CONTACT US</a>
