--- a/portfolio.html
+++ b/portfolio.html
@@ -720,7 +720,6 @@
             </div>
         </div>
     </div>
-
     <!-- Modal [responsive menu] -->
     <div id="menu" class="p-0 modal fade" role="dialog" aria-labelledby="menu" aria-hidden="true">
         <div class="modal-dialog modal-dialog-slideout" role="document">
@@ -729,13 +728,14 @@
                     Menu <i class="icon-close"></i>
                 </div>
                 <div class="menu modal-body">
-                    <div class="row w-100">
+                    <div class="row w-100 justify-content-center">
                         <div class="items p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
                         <div class="contacts p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
+                        <a href="contact.html" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">See How</a>
                     </div>
                 </div>
             </div>
