--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
                                         <span class="title-6">your needs and drive growth.</span>
                                     </h1>
                                     <p data-aos="zoom-out-up" data-aos-delay="600"
-                                        class="p-about hero-w-subtitle pb-5 mb-5">Our
+                                        class="p-about hero-w-subtitle">Our
                                         experience
                                         scaling businesses across Europe, Latin America, and the US allows us to
                                         understand your market and your needs holistically. We also specialize in
@@ -667,13 +667,14 @@
                     Menu <i class="icon-close"></i>
                 </div>
                 <div class="menu modal-body">
-                    <div class="row w-100">
+                    <div class="row w-100 justify-content-center">
                         <div class="items p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
                         <div class="contacts p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
+                        <a href="contact.html" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">See How</a>
                     </div>
                 </div>
             </div>
