--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -271,7 +271,7 @@
                                     </li>
 
                                 </ul>
-                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button "><i
                                         class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
@@ -504,7 +504,7 @@
 
     <!-- Scroll [to top] -->
     <div id="scroll-to-top" class="scroll-to-top">
-        <a href="#header" class="smooth-anchor">
+        <a href="#header" class="">
             <i class="icon-arrow-up"></i>
         </a>
     </div>
