--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -320,7 +320,7 @@
                 <p class="p-portfolio">What do you need in order to take your business to new heights? Let's talk,
                     establish a plan, and start seeing results.</p>
                 <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="200"
-                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
+                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
             </div>
         </div>
     </section>
@@ -511,7 +511,7 @@
                                     </li>
 
                                 </ul>
-                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button "><i
                                         class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
@@ -735,7 +735,7 @@
                         <div class="contacts p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
-                        <a href="contact.html" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
+                        <a href="contact.html" class=" ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
                     </div>
                 </div>
             </div>
@@ -744,7 +744,7 @@
 
     <!-- Scroll [to top] -->
     <div id="scroll-to-top" class="scroll-to-top">
-        <a href="#header" class="smooth-anchor">
+        <a href="#header" class="">
             <i class="icon-arrow-up"></i>
         </a>
     </div>
