--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -218,7 +218,7 @@
                     360-degree digital marketing strategy and growth plan? We've got you covered. Choose individual
                     services as needed, from fee-based projects to monthly programs.</p>
                 <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="200"
-                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                     How</a>
             </div>
         </div>
@@ -231,7 +231,7 @@
                     your growth strategy. We also take part in SALT Venture Partner's accelerated growth eco-system,
                     which enables us to provide special opportunities to our clients.</p>
                 <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="200"
-                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                     How</a>
             </div>
             <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Block_31.jpg" class="w-100" alt=""></div>
@@ -424,7 +424,7 @@
                                     </li>
 
                                 </ul>
-                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button "><i
                                         class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
@@ -648,7 +648,7 @@
                         <div class="contacts p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
-                        <a href="contact.html" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
+                        <a href="contact.html" class=" ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
                     </div>
                 </div>
             </div>
@@ -657,7 +657,7 @@
 
     <!-- Scroll [to top] -->
     <div id="scroll-to-top" class="scroll-to-top">
-        <a href="#header" class="smooth-anchor">
+        <a href="#header" class="">
             <i class="icon-arrow-up"></i>
         </a>
     </div>
