--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <!-- 
                                 Suggestion: Replace the purchase button above with a contact button.
                                 
-                                <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
+                                <a href="#contact" class=" btn ml-lg-auto primary-button"><i class="icon-rocket"></i>CONTACT US</a>
                             -->
                     </li>
                 </ul>
@@ -187,9 +187,7 @@
                                         <p data-aos="zoom-out-up" data-aos-delay="600" class="description">Bunji pairs
                                             rich digital marketing expertise with a full range of services and
                                             technology that allow you to kickstart business innovation.</p>
-                                        <a href="services.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                            class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
-                                            How</a>
+                                        <a href="/services.html" data-aos="zoom-out-up" data-aos-delay="800"  class="ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See How</a>
                                     </div>
                                 </div>
                             </div>
@@ -213,7 +211,7 @@
                                                     development to disciplined campaign execution - we deliver real
                                                     results.</p>
                                                 <a href="portfolio.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                                                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                                                     what's Possible</a>
                                             </div>
                                         </div>
@@ -243,7 +241,7 @@
                                             implement integrated technology platforms to support your programs. You
                                             decide how you'd like to partner up.</p>
                                         <a href="services.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                            class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                                            class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                                             How</a>
                                     </div>
                                 </div>
@@ -270,7 +268,7 @@
                                                     development to disciplined campaign execution - we deliver real
                                                     results.</p>
                                                 <a href="portfolio.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                                                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                                                     what's Possible</a>
                                             </div>
                                         </div>
@@ -302,7 +300,7 @@
                                             implement integrated technology platforms to support your programs. You
                                             decide how you'd like to partner up.</p>
                                         <a href="services.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                            class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                                            class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                                             How</a>
                                     </div>
                                 </div>
@@ -328,7 +326,7 @@
                                                     development to disciplined campaign execution - we deliver real
                                                     results.</p>
                                                 <a href="portfolio.html" data-aos="zoom-out-up" data-aos-delay="800"
-                                                    class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
+                                                    class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                                                     what's Possible</a>
                                             </div>
                                         </div>
@@ -582,7 +580,7 @@
                         America, and the US, we are ready to align your business goals with the right digital marketing
                         capabilities needed to drive your company's success. Let's build something great. </p>
                     <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="400"
-                        class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
+                        class=" ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
                 </div>
                 <img src="assets/images/2.png" class="img-contact-1" alt="">
                 <img src="assets/images/3.png" class="img-contact-2" alt="">
@@ -620,7 +618,7 @@
                                     </li>
 
                                 </ul>
-                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                <a href="contact.html" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button "><i
                                         class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
@@ -845,7 +843,7 @@
                         <div class="contacts p-0 col-12 text-center">
                             <!-- Append [navbar] -->
                         </div>
-                        <a href="contact.html" class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
+                        <a href="contact.html" class=" ml-auto mr-auto ml-md-0 mt-4 cta-menu-resp btn primary-button aos-init aos-animate">CONTACT US</a>
                     </div>
                 </div>
             </div>
@@ -854,7 +852,7 @@
 
     <!-- Scroll [to top] -->
     <div id="scroll-to-top" class="scroll-to-top">
-        <a href="#header" class="smooth-anchor">
+        <a href="#header" class="">
             <i class="icon-arrow-up"></i>
         </a>
     </div>
