--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
                         <div class="col-5 p-0">
                         </div>
                         <div class="col-12 col-md-7 p-4 p-md-0">
-                            <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title">
+                            <h2 data-aos="zoom-out-up" data-aos-delay="400" class="title mt-0">
                                 <span class="title-4">Our goal</span> <br>
                                 <span class="title-5">is your growth.</span>
                             </h2>
