.swiper-pagination-bullet

--- a/about.html
+++ b/about.html
@@ -519,9 +519,9 @@
                                 </div>
                             </div>
                         </div>
-
-
+                        
                     </div>
+                    <div class="swiper-pagination"></div>
                     <p class=" text-center p-about mb-4 mt-0">Our team will help you define a stand-out creative
                         direction and will translate it into visual assets that will resonate with your audience.</p>
                     <a href="contact.html" data-aos="zoom-out-up" data-aos-delay="800"
