--- a/contact.html
+++ b/contact.html
@@ -166,8 +166,8 @@
 
                 <!-- Item 1 -->
                 <div class="swiper-slide slide-center">
-                    <img src="assets/images/Grupo 27933.png" class="hero-image-contact-web w-100 mt-5 pt-5">
-                    <img src="assets/images/Grupo 27933r.png" class="hero-image-contact-mobile d-block d-md-none">
+                    <img src="assets/images/contact-w.png" class="hero-image-contact-web w-100 mt-5 pt-5">
+                    <img src="assets/images/contact-r.png" class="hero-image-contact-mobile d-block d-md-none">
 
                 </div>
             </div>
